koa-140: Fix horizontal scroll in course navigation and unexpected vertical scroll on single unit pages

--- a/lms/static/sass/partials/lms/theme/_global.scss
+++ b/lms/static/sass/partials/lms/theme/_global.scss
@@ -63,6 +63,10 @@ body[class] {
     flex-flow: column nowrap;
     min-height: 100vh;
     overflow-x: hidden;
+
+    .view-in-course & {
+        overflow-x: visible;
+    }
 }
 
 .wrapper-preview-menu {
